完善用户分配角色